--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/aos/dist/aos.css",
+               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [  "node_modules/aos/dist/aos.js"
+          ]
           },
           "configurations": {
             "production": {
@@ -96,9 +98,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
+
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/aos/dist/aos.js"
+
+            ]
           }
         }
       }
