--- a/angular.json
+++ b/angular.json
@@ -98,11 +98,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
 
               "src/styles.scss"
             ],
             "scripts": [
-
+              "node_modules/aos/dist/aos.js"
             ]
           }
         }
